--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,13 +7,23 @@
     margin: 0;
     padding: 0;
 }
+.background{
+    background-color: aqua;
+}
+.border{
+    border: 2px solid red;
+}
+.hidden{
+    visibility: hidden;
+    display: none;
+}
 .flex{
     display: flex;
     flex-direction: row;
 }
 
 .container{
-    width: 90%;
+    width: 80%;
     margin: 0 auto;
 }
 
@@ -35,7 +45,7 @@ body{
 }
 
 .section-subtitle{
-    color: gray;
+    color: rgba(255, 255, 255, 0.5);
     font-size: 1rem;
     text-align: center;
     margin-top: 24px;
@@ -318,12 +328,20 @@ header{
 }
 
 /* BMI CALCULATOR */
+
+.bmi{
+    background: rgb(34, 34, 34);
+    padding: 49px 0;
+}
+
 .bmi-text-container{
-    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .bmi-text-container h2{
     text-align: left;
-
+    align-items: left;
 }
 .bmi-text-container p{
     text-align: left;
@@ -357,9 +375,7 @@ td{
     justify-content: space-between;
     
 }
-.background{
-    background: rgb(34, 34, 34);
-}
+
 .background>div>div{
     display: flex;
     flex-direction: row;
@@ -380,15 +396,15 @@ td{
     margin-top: 14px;
     margin-bottom: 34px;
 }
+
+/* BMI input row */
 .bmi-input-row{
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    height: 100%;
+    gap: 12px;
 }
-.bmi-input{
-    border: 2px solid red;
-}
+
 
 .bmi-row{
     display: flex;
@@ -406,7 +422,7 @@ td{
 }
 .bmi-input-row div input{
     
-    border-radius: 16px;
+    border-radius: 8px;
     background: rgba(255, 255, 255, 0.1);
     padding: 20px;
     width: 50%;
@@ -414,11 +430,22 @@ td{
 }
 .bmi-input-row select{
     padding: 20px;
-    border-radius: 16px;
+    border-radius: 8px;
     background: rgba(255, 255, 255, 0.1);
 }
+.bmi-row2{
+    display: flex;
+    justify-content: space-evenly;
+    gap: 12px;
+}
+
+.bmi-row2 div{
+    width: 50%;
+    
+}
 .bmi-row2 select{
-    width: 55%;
+    flex: 1;
+    width: 50%;
     color: rgba(255, 255, 255, 0.6);
     border: none;
 }
@@ -427,6 +454,7 @@ td{
     color: white;
     color: rgba(255, 255, 255, 0.6);
     border: none;
+        
 }
 
 .bmi-input-row button{
@@ -437,6 +465,60 @@ td{
     border-radius: 42px;
     background: rgb(230, 83, 60);
     border: none;
+    margin-top: 24px;
+}
+
+/* Meet Our team */
+
+.meet-our-team{
+    margin-top: 88px;
+}
+.meet-image-div-container{
+    padding: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
+    border-radius: 18px;
+    background: rgba(255, 255, 255, 0.1);
+    margin-top: 58px;
+    
+}
+.meet-image-div-container div{
+    position: relative;
+}
+.meet-image-div-container img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    align-items: center;
+    border-radius: 18px;
+}
+.meet-image-div-container h3{
+    color: white;
+    font-family: 'Inter';
+    font-size: 1.2rem;
+    font-weight: 900;
+    position: absolute;
+    bottom: 50px;
+    left: 20px;
+}
+.meet-image-div-container p{
+    color: rgba(255, 255, 255, 0.5);
+    font-family: 'Inter';
+    font-size: .9rem;
+    font-weight: 400;
+    position: absolute;
+    bottom: 30px;
+    left: 20px;
+}
+.meet-image-div-container div .overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.3);
+    pointer-events: none; 
 }
 
 
@@ -445,6 +527,10 @@ td{
 @media  screen and (max-width:576px) {
     .navbar ul{
         visibility: hidden;
+        display: none;
+    }
+    .navbar div{
+        display: block;
     }
 
     .banner,
