--- a/styles/styles.css
+++ b/styles/styles.css
@@ -434,6 +434,7 @@ td{
     padding: 20px;
     border-radius: 8px;
     background: rgba(255, 255, 255, 0.1);
+    color: rgba(255, 255, 255, 0.6);
 }
 .bmi-row2{
     display: flex;
